--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>The first eight questions will all be about 2021.
     Full names and correct spelling are necessary. 
     The answers are case sensitive (sorry)
-<p>Who interviewed Meghan Markle and Prince Harry on CBS?</p>
+<p>Who interviewed Meghan Markle and Prince Harry on CBS? (just the first name)</p>
 <input id = "textbox" type = "text" name = "question1">
 <p>Who are the current Premier League leaders?</p>
 <input id = "textbox" type = "text" name = "question2">
